# hotel_site

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django_test.yml
src/core/: urls.py
src/core/settings/: __init__.py
src/core/settings/components/: __init__.py  base.py  baton.py
src/core/settings/environments/: development.py  production.py
