[tool.poetry]
name = "hotel"
version = "1.0"
description = ""
authors = ["BRANYA <tbd2504@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
django-split-settings = "^1.2.0"
django-baton = "^3.0.2"
django-admin-thumbnails = "^0.2.8"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
pillow = "^10.2.0"
django-debug-toolbar = "^4.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
ruff = "^0.2.1"
mypy = "^1.8.0"
faker = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "single"


[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false